# actix-web-skeleton

./: .env.example  .gitignore  Cargo.toml  README.md  Rakefile  docker-compose.yml
docker/dev/: Dockerfile
docker/prod/: Dockerfile
src/: main.rs
src/routes/: mod.rs
