[package]
name = "actix-web-skeleton"
version = "0.1.0"
authors = ["Rivsen <Rivsen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3"
